# golang-mergecover

./: README  mergecover.cabal
src/: Main.hs
