name:                mergecover
version:             0.1.0.0
synopsis:            Merge GoLang cover data of multiple packages
description:         Please see README
homepage:            https://github.com/ZjMNZHgG5jMXw/golang-mergecover
license:             BSD3
license-file:        LICENSE
author:              Stefan Berthold
maintainer:          stefan.berthold@gmx.net
copyright:           BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mergecover
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
                     , containers
